#69133 prevent content jumps for category image, and picture template

--- a/Snowdog_Components/components/Organisms/slider/_slider.scss
+++ b/Snowdog_Components/components/Organisms/slider/_slider.scss
@@ -102,15 +102,20 @@
 
     &__slides {
         height: auto;
+        display: flex;
 
         .slick-list {
             min-height: $slider__nav-button-size;
+        }
+
+        &.slick-initialized {
+            display: block;
         }
     }
 
     &__item {
         height: auto;
-        display: none;
+        opacity: 0;
     }
 
     &__navigation {
